# micro-auth

./: pyproject.toml
authapp/: forms.py  settings.py  urls.py  views.py
authapp/templates/: index.html
custom_user/: admin.py  models.py
custom_user/migrations/: 0001_initial.py
