[tool.poetry]
name = "auth_app"
version = "0.1.0"
description = "learning django apps with auth stuff"
authors = ["Enrique Galindo <egalindo@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
